--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,22 @@
     <div class="container-fluid text-center">
       <h1 class="mt-5">Hello Rigo!</h1>
       <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+      <div
+        class="alert alert-warning mt-4 container-fluid text-center"
+        style="min-width: 300px;"
+      >
+        <h1 class="mt-5">OMG You will not believe me but...</h1>
+        <h1 id="the-excuse" class="mt-4">
+          The dog ate my homework before the class
+        </h1>
+        <button id="btn" class="mt-4 btn btn-success">
+          Generate new excuse
+        </button>
       </div>
     </div>
   </body>
+  <footer style="padding: 0; text-align: center; min-width: 300px;">
+    Made with ❤️ by
+    <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+  </footer>
 </html>
